--- a/src/app/features/sports/components/detail/tabs/sport-players-tab.component.html
+++ b/src/app/features/sports/components/detail/tabs/sport-players-tab.component.html
@@ -48,7 +48,7 @@
           <input
             placeholder="Search and select person to add..."
             tuiComboBox
-            [(ngModel)]="selectedPersonId"
+            [(ngModel)]="selectedPerson"
             [disabled]="availablePersonsLoading()" />
           <tui-data-list *tuiTextfieldDropdown size="l">
             @if (availablePersonsLoading()) {
@@ -63,7 +63,7 @@
                   new
                   tuiOption
                   type="button"
-                  [value]="person.id"
+                  [value]="person"
                   class="sport-players-tab__person-option">
                   {{ capitalizeName(person.second_name) }}, {{ capitalizeName(person.first_name) }}
                 </button>
@@ -78,7 +78,7 @@
           tuiButton
           appearance="primary"
           (click)="addPlayer()"
-          [disabled]="!selectedPersonId()">
+          [disabled]="!selectedPerson()">
           Add Player
         </button>
         <button
