fix(players): remove comma and capitalize names in ComboBox display
- Remove comma between last name and first name
- Apply capitalizeName() to both names in stringifyPerson()
- Update template to match format without comma
- Selected name now displays correctly capitalized: 'Lastname Firstname'

--- a/src/app/features/sports/components/detail/tabs/sport-players-tab.component.html
+++ b/src/app/features/sports/components/detail/tabs/sport-players-tab.component.html
@@ -65,7 +65,7 @@
                   type="button"
                   [value]="person"
                   class="sport-players-tab__person-option">
-                  {{ capitalizeName(person.second_name) }}, {{ capitalizeName(person.first_name) }}
+                  {{ capitalizeName(person.second_name) }} {{ capitalizeName(person.first_name) }}
                 </button>
               }
             }
