--- a/src/app/features/sports/components/detail/tabs/sport-players-tab.component.less
+++ b/src/app/features/sports/components/detail/tabs/sport-players-tab.component.less
@@ -51,6 +51,11 @@
   padding: 0.75rem 1rem;
 }
 
+.sport-players-tab__dropdown-list {
+  max-height: 400px;
+  overflow-y: auto;
+}
+
 .sport-players-tab__dropdown-loading,
 .sport-players-tab__dropdown-error,
 .sport-players-tab__dropdown-empty {
