--- a/src/app/features/sports/components/detail/tabs/sport-players-tab.component.html
+++ b/src/app/features/sports/components/detail/tabs/sport-players-tab.component.html
@@ -117,7 +117,8 @@
         <button
           class="sport-players-tab__player-card"
           tuiCardLarge
-          tuiCell="l">
+          tuiCell="l"
+          (click)="navigateToPlayerDetail(player.id)">
           <tui-avatar size="l" [round]="true">
             @if (player.first_name && player.second_name) {
               {{ capitalizeName(player.first_name)[0].toUpperCase() }}{{ capitalizeName(player.second_name)[0].toUpperCase() }}
