--- a/src/app/features/players/components/detail/player-detail.component.html
+++ b/src/app/features/players/components/detail/player-detail.component.html
@@ -4,7 +4,10 @@
   } @else if (player()) {
     <app-entity-header
       [title]="playerName()"
+      [showDelete]="!isInSportContext()"
+      [customMenuItems]="customMenuItems()"
       (navigateBack)="navigateBack()"
+      (customItemClick)="onCustomItemClick($event)"
     />
 
     <div class="player-detail__content">
