--- a/src/app/features/auth/components/register-dialog/register-dialog.component.html
+++ b/src/app/features/auth/components/register-dialog/register-dialog.component.html
@@ -101,7 +101,7 @@
 
   <div class="register-dialog__footer">
     <span class="register-dialog__footer-text">Already have an account?</span>
-    <button type="button" tuiButton appearance="flat" class="register-dialog__link">
+    <button type="button" tuiButton appearance="flat" class="register-dialog__link" (click)="openLoginDialog()">
       Sign In
     </button>
   </div>
